# thermostat

./: .gitignore  Cargo.toml  deploy-client.bat  deploy-client.sh  follow_logs.sh  run_server.sh  thermostat_client.service  thermostat_server.service  update.sh
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server-core/: Cargo.toml
server-core/src/: lib.rs
server/src/: error.rs  main.rs  tables.rs
server/src/controllers/: data_controller.rs  mod.rs
server/src/seeders/: sensors.rs
