[package]
name = "server-core"
version = "0.1.0"
edition = "2024"

[dependencies]
physics_test = { workspace = true }
serde = { workspace = true }
rusqlite = { workspace = true, optional = true }
typed_db = { workspace = true, optional = true }
chrono = { workspace = true }


[features]
# default = ["server"]
server = ["rusqlite", "typed_db"]
