[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
typed_db = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
physics_test = { workspace = true }
chrono = { workspace = true }


tokio = { version = "1.44.*", features = ["full", "tracing"] }
tower = { version = "0.5.*", features = ["tokio", "tracing"] }
tower-http = { version = "0.6.*", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.*", features = ["fmt", "env-filter"] }
